# fuzzing_tcnopen_trdp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  flake.nix  fuzz.cpp  parse_xml.cpp  xml.dict  xsd_check.cpp
cmake/toolchains/: afl-asan.cmake  afl-cmplog.cmake  afl.cmake
cmake/toolchains/wrappers/: afl-clang-fast++-cmplog  afl-clang-fast-cmplog
inputs/: seed1.xml  seed2.xml  seed3.xml
scripts/: build_all.sh  check_xml_validity_of_crashes.sh  start_fuzzing.sh  status_fuzzing.sh  stop_fuzzing.sh
